k8s/smart-health-app/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-health-app
  namespace: production
spec:
  # replicas: 2 # updated 2 for HA
  selector:
    matchLabels:
      app: smart-health-app
  template:
    metadata:
      labels:
        app: smart-health-app
      annotations:
        description: "Deployment for the smart-health application"
    spec:
      containers:
        - name: smart-health-container
          image: rameshlodh/smart-health-monitoring-app:6c5a8274ae2ed7a15416d775f3f52915bf360cb0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 3
