k8s/smart-health-app/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-health-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: smart-health-app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 9001
