k8s/smart-health-app/NetworkPolicy .yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: smart-health-policy
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: smart-health-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
